grammar.js
    source_file: $ => repeat(choice(
      $.property_statement,
      $.handler_definition,
      $._statement,
    )),

    _statement: $ => choice(
      $.tell_statement,
      $.if_statement,
      $.repeat_statement,
      $.try_statement,
      $.set_statement,
      $.return_statement,
      $.exit_statement,
      $.error_statement,
      $.considering_statement,
      $.ignoring_statement,
      $.timeout_statement,
      $.transaction_statement,
      $.use_statement,
      $.script_statement,
      $.application_command,
      $.expression_statement,
    ),

    // Comments
    tell_statement: $ => prec.right(choice(
      seq(
        'tell',
        field('target', $.expression),
        'to',
        field('statement', $._statement),
      ),
      seq(
        'tell',
        field('target', $.expression),
        repeat1($._statement),
        'end',
        optional('tell'),
      ),
      seq(
        'tell',
        field('target', $.expression),
      ),
    )),

    // If Statement
    repeat_statement: $ => choice(
      $.repeat_forever,
      $.repeat_times,
      $.repeat_until,
      $.repeat_while,
      $.repeat_with,
      $.repeat_with_in,
    ),

    repeat_with_in: $ => prec.right(seq(
      'repeat',
      'with',
      field('variable', $.identifier),
      'in',
      field('list', $.expression),
      repeat1($._statement),
      'end',
      optional('repeat'),
    )),

    // Try Statement
    set_statement: $ => seq(
      choice('set', 'copy'),
      field('target', $.expression),
      'to',
      field('value', $.expression),
    ),

    // Return Statement
    return_statement: $ => prec.right(seq(
      'return',
      optional(field('value', $.expression)),
    )),

    // Exit Statement
    property_statement: $ => seq(
      'property',
      field('name', $.identifier),
      ':',
      field('value', $.expression),
    ),

    // Handler Definition
    handler_definition: $ => choice(
      $.simple_handler,
      $.positional_handler,
      $.labeled_handler,
    ),

    simple_handler: $ => prec.right(10, seq(
      'on',
      field('name', $.identifier),
      '(',
      optional($.parameter_list),
      ')',
      repeat1($._statement),
      'end',
      optional(field('end_name', $.identifier)),
    )),

    positional_handler: $ => prec.right(10, seq(
      'on',
      field('name', $.identifier),
      optional($.direct_parameter),
      repeat($.labeled_parameter),
      repeat1($._statement),
      'end',
      optional(field('end_name', $.identifier)),
    )),

    direct_parameter: $ => prec(1, field('parameter', choice(
      $.identifier,
      $.string,
      $.number,
    ))),

    labeled_parameter: $ => prec(2, choice(
      seq(
        field('label', $.identifier),
        field('parameter', $.identifier),
      ),
      seq(
        field('label', $.identifier),
        ':',
        field('parameter', $.identifier),
      ),
    )),

    parameter_list: $ => seq(
      $.identifier,
      repeat(seq(',', $.identifier)),
    ),

    // Known multi-word commands (tokens for commands without keywords, sequences for those with keywords)
    system_attribute: $ => token(prec(10, seq('system', /\s+/, 'attribute'))),
    do_shell_script: $ => token(prec(10, seq('do', /\s+/, 'shell', /\s+/, 'script'))),
    do_javascript: $ => token(prec(10, seq('do', /\s+/, /[Jj]ava[Ss]cript/))),
    // path_to: Disabled for now due to conflicts with "POSIX path of" expressions
    write_text: $ => token(prec(10, seq('write', /\s+/, 'text'))),
    create_window: $ => token(prec(10, seq('create', /\s+/, 'window'))),

    // Known multi-word property names (common Terminal.app and other app properties)
    current_session: $ => token(prec(10, seq('current', /\s+/, 'session'))),
    current_window: $ => token(prec(10, seq('current', /\s+/, 'window'))),
    current_tab: $ => token(prec(10, seq('current', /\s+/, 'tab'))),
    first_window: $ => token(prec(10, seq('first', /\s+/, 'window'))),
    first_button: $ => token(prec(10, seq('first', /\s+/, 'button'))),
    front_document: $ => token(prec(10, seq('front', /\s+/, 'document'))),
    front_window: $ => token(prec(10, seq('front', /\s+/, 'window'))),
    selected_tab: $ => token(prec(10, seq('selected', /\s+/, 'tab'))),
    every_item: $ => token(prec(10, seq('every', /\s+/, 'item'))),
    scroll_area: $ => token(prec(10, seq('scroll', /\s+/, 'area'))),
    application_command: $ => choice(
      // Known multi-word commands (highest precedence)
      prec.right(5, seq(
        field('command', choice(
          $.system_attribute,
          $.do_shell_script,
          $.do_javascript,
          // Note: path_to_command is only used in path_to_expression, not as a command
          $.write_text,
          $.create_window,
        )),
        optional(repeat1(choice(
          $.direct_parameter,
          $.command_parameter,
          $.expression,
        ))),
        optional(choice(
          $.with_clause,
          $.without_clause,
          $.using_clause,
        )),
      )),
      // Generic command with parameters (medium precedence)
      prec.right(2, seq(
        field('command', choice(
          $.identifier,
          alias(seq($.identifier, repeat1($.identifier)), $.property_name),
        )),
        repeat1(choice(
          $.direct_parameter,
          $.command_parameter,
          $.expression,
        )),
        optional(choice(
          $.with_clause,
          $.without_clause,
          $.using_clause,
        )),
      )),
      // Multi-word command without parameters (lower precedence)
      prec.right(1, seq(
        field('command', alias(seq($.identifier, repeat1($.identifier)), $.property_name)),
        optional(choice(
          $.with_clause,
          $.without_clause,
          $.using_clause,
        )),
      )),
    ),

    command_parameter: $ => seq(
      field('label', $.identifier),
      field('value', choice($.identifier, $.expression)),
    ),

    with_clause: $ => seq(
      'with',
      field('option', $.property_name),
    ),

    without_clause: $ => seq(
      'without',
      field('option', $.property_name),
    ),

    using_clause: $ => seq(
      'using',
      choice(
        $.property_name,
        $.list,
      ),
    ),

    // Property name (can be multi-word)
    property_name: $ => choice(
      // Known multi-word property tokens (highest precedence)
      $.current_session,
      $.current_window,
      $.current_tab,
      $.first_window,
      $.first_process,
      $.first_button,
      $.first_document,
      $.first_item,
      $.front_document,
      $.front_window,
      $.selected_tab,
      $.selected_window,
      $.every_item,
      $.every_window,
      $.scroll_area,
      $.radio_group,
      $.radio_button,
      // Generic multi-word properties
      seq($.identifier, repeat1($.identifier)),
      // Single identifier (lowest precedence)
      $.identifier,
    ),

    // Expression Statement
    expression_statement: $ => $.expression,

    // Objective-C Method Call (AppleScriptObjC)
    method_call: $ => prec.right(16, seq(
      field('object', $.expression),
      '\'s',
      field('method', $.method_call_label),
      ':',
      field('argument', $.expression),
      // TODO: Support multiple labeled parameters
    )),

    // Path to expression (special case of command used as expression)
    path_to_expression: $ => prec(14, seq(
      $.path_to_command,
      choice(
        prec.dynamic(1, $.property_name),  // Prefer multi-word properties
        $.expression,                       // Fallback to any expression
      ),
    )),

    // Expressions
    expression: $ => choice(
      $.binary_expression,
      $.unary_expression,
      $.type_cast,  // Type cast with 'as' keyword
      $.parenthesized_expression,
      $.application_expression,
      $.path_to_expression,  // "path to" command in expression context
      $.method_call,  // Must be before property_access (higher precedence)
      $.property_access,
      $.element_access,
      $.list,
      $.record,
      $.identifier,
      prec.dynamic(-1, $.property_name),  // Lower dynamic precedence so identifier is preferred
      $.string,
      $.number,
      $.boolean,
      $.missing_value,
      $.current_application,
      $.script_reference,
      $.reference_expression,
    ),

    binary_expression: $ => {
      const table = [
        [prec.left, 12, '^'],
        [prec.left, 11, choice('*', '/', 'div', 'mod', '÷')],
        [prec.left, 10, choice('+', '-', '&')],
        [prec.left, 7, choice('and', 'or')],
        [prec.left, 6, choice(
          '=', '≠', '>', '<', '≥', '≤', '>=', '<=',
          'equals', 'is equal to', 'is equal', 'equal to',
          'is not', 'is not equal to', 'is not equal', 'isn\'t', 'isn\'t equal to',
          'is greater than', 'greater than', 'comes after',
          'is less than', 'less than', 'comes before',
          'is greater than or equal to', 'is greater than or equal',
          'is less than or equal to', 'is less than or equal',
          'is',
        )],
        [prec.left, 5, choice(
          'contains', 'contain', 'does not contain', 'doesn\'t contain',
          'is in', 'is contained by',
          'is not in', 'is not contained by',
          'starts with', 'start with', 'begins with', 'begin with',
          'ends with', 'end with',
        )],
      ];

      return choice(...table.map(([fn, precedence, operator]) =>
        fn(precedence, seq(
          field('left', $.expression),
          field('operator', operator),
          field('right', $.expression),
        ))
      ));
    },

    // Type cast expression (e.g., "x as text", "(path to home) as alias")
    type_cast: $ => prec.left(4, seq(
      field('value', $.expression),
      'as',
      field('type', $.identifier),
    )),

    parenthesized_expression: $ => seq(
      '(',
      choice(
        $.expression,
        $.application_command,  // Allow commands in parentheses (e.g., for command results)
      ),
      ')',
    ),

    application_expression: $ => prec(14, seq(
      'application',
      field('name', $.string),
    )),

    property_access: $ => prec.left(15, seq(
      field('object', $.expression),
      '\'s',
      field('property', $.property_name),
    )),

    element_access: $ => prec.left(15, seq(
      field('element', $.property_name),
      choice(
        seq(field('index', $.number), 'of', field('object', $.expression)),
        seq('of', field('object', $.expression)),
        field('index', $.number),  // Allow implicit object (e.g., "window 1")
      ),
    )),

    reference_expression: $ => seq(
      choice('a ref to', 'a reference to', 'ref to', 'reference to'),
      field('target', $.expression),
    ),

    // Literals
    identifier: $ => choice(
      /[A-Za-z_][A-Za-z0-9_]*/,
      seq('|', /[^|]+/, '|'),
    ),

    string: $ => seq(
      '"',
      repeat(choice(
        /[^"\\]+/,
        /\\./,
      )),
      '"',
    ),

    number: $ => choice(
      $.integer,
      $.real,
    ),

    integer: $ => /[0-9]+/,

    boolean: $ => choice('true', 'false', 'yes', 'no'),

    missing_value: $ => seq('missing', 'value'),

    current_application: $ => token(seq('current', /\s+/, 'application')),

    script_reference: $ => seq('script', $.string),

    list: $ => seq(
      '{',
      optional(seq(
        $.expression,
        repeat(seq(',', $.expression)),
        optional(','),
      )),
      '}',
    ),

    record: $ => seq(
      '{',
      optional(seq(
        $.record_entry,
        repeat(seq(',', $.record_entry)),
        optional(','),
      )),
      '}',
    ),

    record_entry: $ => seq(
      field('key', choice($.identifier, $.string)),
      ':',
      field('value', $.expression),
    ),
  },
});
