test/corpus/app_commands.txt
================================================================================
Application command with "with" clause
================================================================================

create window with default profile

--------------------------------------------------------------------------------

(source_file
  (application_command
    command: (create_window)
    (with_clause
      option: (property_name
        (identifier)
        (identifier)))))

================================================================================
Multi-word property access
================================================================================

set AppleScript's text item delimiters to " "

--------------------------------------------------------------------------------

(source_file
  (set_statement
    target: (expression
      (property_access
        object: (expression (identifier))
        property: (property_name
          (identifier)
          (identifier)
          (identifier))))
    value: (expression (string))))

================================================================================
Multi-word element access
================================================================================

set x to POSIX path of aFile

--------------------------------------------------------------------------------

(source_file
  (set_statement
    target: (expression (identifier))
    value: (expression
      (element_access
        element: (property_name
          (identifier)
          (identifier))
        object: (expression (identifier))))))

================================================================================
Application command with direct parameter
================================================================================

activate window

--------------------------------------------------------------------------------

(source_file
  (application_command
    command: (identifier)
    (direct_parameter
      parameter: (identifier))))

================================================================================
system attribute command
================================================================================

set bundleId to (system attribute "alfred_workflow_bundleid")

--------------------------------------------------------------------------------

(source_file
  (set_statement
    target: (expression (identifier))
    value: (expression
      (parenthesized_expression
        (application_command
          command: (system_attribute)
          (direct_parameter
            parameter: (string)))))))

================================================================================
do shell script command
================================================================================

do shell script "pwd"

--------------------------------------------------------------------------------

(source_file
  (application_command
    command: (do_shell_script)
    (direct_parameter
      parameter: (string))))

================================================================================
TODO: do JavaScript command
================================================================================

do JavaScript theCode in document 1

--------------------------------------------------------------------------------

(source_file
  (application_command
    command: (do_javascript)
    (direct_parameter
      parameter: (identifier))
    (command_parameter
      label: (identifier)
      value: (expression
        (element_access
          element: (property_name (identifier))
          index: (number (integer))
          object: (expression (identifier)))))))

================================================================================
path to command
================================================================================

set homePath to path to home folder

--------------------------------------------------------------------------------

(source_file
  (set_statement
    target: (expression (identifier))
    value: (expression
      (path_to_expression
        (path_to_command)
        (property_name
          (identifier)
          (identifier))))))

================================================================================
path to with POSIX path of
================================================================================

set _home to POSIX path of (path to home folder as alias)

--------------------------------------------------------------------------------

(source_file
  (set_statement
    target: (expression (identifier))
    value: (expression
      (element_access
        element: (property_name (identifier) (identifier))
        object: (expression
          (parenthesized_expression
            (expression
              (type_cast
                value: (expression
                  (path_to_expression
                    (path_to_command)
                    (property_name
                      (identifier)
                      (identifier))))
                type: (identifier)))))))))

================================================================================
Multi-word property in 'of' expression
================================================================================

tell current session of current window
    activate
end tell

--------------------------------------------------------------------------------

(source_file
  (tell_statement
    target: (expression
      (element_access
        element: (property_name (current_session))
        object: (expression
          (property_name (current_window)))))
    (expression_statement
      (expression (identifier)))))

================================================================================
Nested multi-word 'of' expressions
================================================================================

set myTab to current tab of first window
tell myTab
    close
end tell

--------------------------------------------------------------------------------

(source_file
  (set_statement
    target: (expression (identifier))
    value: (expression
      (element_access
        element: (property_name (current_tab))
        object: (expression
          (property_name (first_window))))))
  (tell_statement
    target: (expression (identifier))
    (expression_statement
      (expression (identifier)))))

================================================================================
Multi-word property - System Events UI scripting
================================================================================

tell application "System Events"
    set btn to first button of scroll area 1 of window 1
end tell

--------------------------------------------------------------------------------

(source_file
  (tell_statement
    target: (expression
      (application_expression
        name: (string)))
    (set_statement
      target: (expression (identifier))
      value: (expression
        (element_access
          element: (property_name (first_button))
          object: (expression
            (element_access
              element: (property_name (scroll_area))
              index: (number (integer))
              object: (expression
                (element_access
                  element: (property_name (identifier))
                  index: (number (integer)))))))))))
================================================================================
Multi-word property - front document
================================================================================

tell application "Safari"
    set theURL to URL of front document
end tell

--------------------------------------------------------------------------------

(source_file
  (tell_statement
    target: (expression
      (application_expression
        name: (string)))
    (set_statement
      target: (expression (identifier))
      value: (expression
        (element_access
          element: (property_name (identifier))
          object: (expression
            (property_name (front_document))))))))
================================================================================
Multi-word property - every item
================================================================================

set oldFiles to every item of myFolder

--------------------------------------------------------------------------------

(source_file
  (set_statement
    target: (expression (identifier))
    value: (expression
      (element_access
        element: (property_name (every_item))
        object: (expression (identifier))))))

================================================================================
Multi-word property - selected tab
================================================================================

tell application "Safari"
    set tabURL to URL of selected tab of front window
end tell

--------------------------------------------------------------------------------

(source_file
  (tell_statement
    target: (expression
      (application_expression
        name: (string)))
    (set_statement
      target: (expression (identifier))
      value: (expression
        (element_access
          element: (property_name (identifier))
          object: (expression
            (element_access
              element: (property_name (selected_tab))
              object: (expression
                (property_name (front_window))))))))))

================================================================================
Multi-word command
================================================================================

tell application "Terminal"
    write text "hello world" with newline
end tell

--------------------------------------------------------------------------------

(source_file
  (tell_statement
    target: (expression
      (application_expression
        name: (string)))
    (application_command
      command: (write_text)
      (direct_parameter
        parameter: (string))
      (with_clause
        option: (property_name (identifier))))))

================================================================================
Multi-word command without parameters
================================================================================

tell application "Terminal"
    create window
end tell

--------------------------------------------------------------------------------

(source_file
  (tell_statement
    target: (expression
      (application_expression
        name: (string)))
    (application_command
      command: (create_window))))

================================================================================
Using clause with modifier list
================================================================================

tell application "System Events"
    keystroke "c" using {command down, shift down}
end tell

--------------------------------------------------------------------------------

(source_file
  (tell_statement
    target: (expression
      (application_expression
        name: (string)))
    (application_command
      command: (identifier)
      (direct_parameter
        parameter: (string))
      (using_clause
        (list
          (expression
            (property_name (identifier) (identifier)))
          (expression
            (property_name (identifier) (identifier))))))))

================================================================================
Using clause with single modifier
================================================================================

keystroke "v" using command down

--------------------------------------------------------------------------------

(source_file
  (application_command
    command: (identifier)
    (direct_parameter
      parameter: (string))
    (using_clause
      (property_name (identifier) (identifier)))))
